--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,5 +9,12 @@
     <zhuyuguang.com.verticalseekbar.view.VerticalSeekBar
         android:id="@+id/verticalSeekBar"
         android:layout_width="80dp"
-        android:layout_height="200dp" />
-</LinearLayout>
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        android:background="#ff0000" />
+
+    <TextView
+        android:id="@+id/textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</RelativeLayout>
